clusters/dev/progressive-delivery/it-tools-rollout/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools-canary
  namespace: default
  labels:
    app: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - port: 80
      targetPort: 80
